--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Darryl Pogue <darryl@dpogue.ca>",
   "license": "MIT",
   "repository": "github:css-george/postcss-george",
+  "files": [
+      "index.js"
+  ],
   "keywords": [
       "css",
       "postcss",
@@ -16,7 +19,8 @@
   "scripts": {
     "lint": "eslint .",
     "test": "tap test/*.js",
-    "preversion": "npm test"
+    "preversion": "npm run lint && npm test",
+    "postversion": "git push && git push --tags"
   },
   "peerDependencies": {
     "postcss": "^8.0.0"
