Update to new eslint config format

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "css variables"
   ],
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint",
     "test": "tap test/*.js",
     "preversion": "npm run lint && npm test",
     "postversion": "git push && git push --tags"
