--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,12 @@ jobs:
     name: Lint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Use Node.js latest
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
+        with:
+            cache: npm
 
       - name: npm install
         run: npm ci
@@ -27,22 +29,26 @@ jobs:
         run: npm run lint
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v1
+        uses: github/codeql-action/init@v3
         with:
-          languages: javascript
+          tools: linked
+          languages: javascript, actions
+          queries: security-and-quality
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v1
+        uses: github/codeql-action/analyze@v3
 
 
   test:
     name: Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Use Node.js latest
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
+        with:
+            cache: npm
 
       - name: npm install and test
         run: npm cit
